<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<groupId>com.fastcms</groupId>
	<artifactId>fastcms</artifactId>
	<version>${revision}</version>
	<name>fastcms-${project.version}</name>
	<description>fastcms project for Spring Boot</description>
	<properties>
		<revision>0.0.6-SNAPSHOT</revision>
		<!-- Compiler settings properties -->
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<commons.lang.version>2.6</commons.lang.version>
		<commons-io.version>2.7</commons-io.version>
		<easy-captcha.version>1.6.2</easy-captcha.version>
		<reflections.version>0.9.11</reflections.version>
		<jsoup.version>1.11.3</jsoup.version>
		<jjwt.version>0.11.2</jjwt.version>
		<maven-flatten-version>1.1.0</maven-flatten-version>
		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
		<spring-boot-dependencies.version>2.6.6</spring-boot-dependencies.version>

	</properties>

	<scm>
		<url>git@gitee.com:xjd2020/fastcms.git</url>
		<connection>scm:git@gitee.com:xjd2020/fastcms.git</connection>
		<developerConnection>scm:git@gitee.com:xjd2020/fastcms.git</developerConnection>
		<tag>fastcms-${revision}</tag>
	</scm>

	<developers>
		<developer>
			<id>XJD Fastcms</id>
			<name>Fastcms</name>
			<url>http://www.xjd2020.com</url>
			<email>wjun_java@163.com</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>LGPL-3.0</name>
			<url>https://gitee.com/xjd2020/fastcms/blob/master/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>gitee</system>
		<url>https://gitee.com/xjd2020/fastcms/issues</url>
	</issueManagement>

	<modules>
		<module>codegen</module>
		<module>web</module>
		<module>core</module>
		<module>service</module>
		<module>plugins</module>
        <module>common</module>
		<module>starters</module>
        <module>cms</module>
        <module>templates</module>
    </modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot-dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons.lang.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>${jsoup.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-common</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-core</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-service</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-templates</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-cms</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-web</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-plugin-starter</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-payment-starter</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-wechat-starter</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-lucene-starter</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-email-starter</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.fastcms</groupId>
				<artifactId>fastcms-mybatis-starter</artifactId>
				<version>${revision}</version>
			</dependency>

			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jjwt.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jjwt.version}</version>
				<scope>runtime</scope>
			</dependency>

			<dependency>
				<groupId>com.github.whvcse</groupId>
				<artifactId>easy-captcha</artifactId>
				<version>${easy-captcha.version}</version>
			</dependency>
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>${reflections.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<compilerVersion>${maven.compiler.source}</compilerVersion>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${maven-flatten-version}</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
					<pomElements>
						<dependencies>expand</dependencies>
					</pomElements>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.shalousun</groupId>
				<artifactId>smart-doc-maven-plugin</artifactId>
				<version>2.3.0</version>
				<configuration>
					<!--指定生成文档使用的配置文件-->
					<configFile>./src/main/resources/smart-doc.json</configFile>
					<!--指定分析的依赖模块（避免分析所有依赖，导致生成文档变慢，循环依赖导致生成失败等问题）-->
					<includes>
						<include>com.fastcms:fastcms-web</include>
						<include>com.fastcms:fastcms-cms</include>
						<include>com.fastcms:fastcms-common</include>
						<include>com.fastcms:fastcms-service</include>
						<include>com.fastcms:fastcms-core</include>
						<include>com.baomidou:mybatis-plus-extension</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<!--不需要在编译项目时自动生成文档可注释phase-->
						<phase>compile</phase>
						<goals>
							<goal>html</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
